# mosek_example

./: .gitignore  CMakeLists.txt  LICENSE  README.md
SOCP/: CMakeLists.txt
SOCP/example/: socp_Newton_example.cpp  socp_example.cpp  socp_mosek.cpp
example/: 11.2_primal_svm.cc  11.3_total_variation.cc  11.6_lownerjohn_ellipsoid.cc  7.1.1_Example_LO1.cpp  7.10_Problem_Modification_and_Reoptimization.cpp  7.11_Parallel_optimization.cpp  7.12_Retrieving_infeasibility_certificates.cpp  7.2.1_Example_CQO1.cpp  7.3.1_Example_POW1.cpp  7.5.1_Example_GP1.cpp  7.6.1_Example_SDO1.cpp  7.6.1_Example_SDO2.cpp  7.6.1_Example_SDO3.cpp  7.7.1_Example_MILO1.cpp  7.7.2_Example_MILO1.cc  7.7.3_Example_MICO1.cpp  7.8.2_Example_DJC1.cpp  7.9_Model_Parametrization_and_Reoptimization.cpp  8.1_response.cc  8.7_callback.cc  BetterCommand_test.cpp  CQP.cpp  LP.cpp  PCO.cpp  matrix2Array.cpp
example/SDQP/example/: sdqp_example.cpp
example/SOCP/: CMakeLists.txt
example/SOCP/example/: socp_example.cpp  socp_mosek.cpp
